# yew-basics

./: .gitignore  Cargo.toml  README.md  deneme.css  index.html  input.css  main.rs  output.css  package-lock.json  tailwind.config.js
docs/: index.html  yew-deneme-2b32c3d4f92c2fad.js  yew-deneme-2b32c3d4f92c2fad_bg.wasm
src/: input_example.rs  main.rs  nav.rs  todolist.rs  todos.rs  todotype.rs
src/db/: init.rs
src/pages/: home.rs  mod.rs  posts.rs
